# BackEnd-CRUD

./: .env.example  .gitignore  main.py  pyproject.toml
DB/: .env  EnginePostgresql.py  models.py  worker.py
configFile/: config.yml  config_log.py
controller/: config_log.py  main.py
model/: models_for_cinema.py
repository/: create_connection_to_bd.py  models_for_sql.py  worker.py
